--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,8 +20,8 @@ main {
 aside {
     grid-area: side;
 }
-aside2{
-    gride-area: side2;
+.aside2{
+    grid-area: side2;
 }
 footer {
     grid-area: footer;
@@ -42,14 +42,16 @@ ul {
 }
 h1, h2, h3, h4, h5, h6 {font-family: Helvetica, sans-serif}
 li {list-style: none}
-#bild1 {float: none; padding: 5px}
+.bild1 {float: none; width: 100%;  padding: 5px}
+#bild2 {float: none; width: 100%; padding: 5px}
+
 img {float: left; padding-right: 15px; padding-bottom: 5px;}
 header {background: white; margin: 10px; padding: 10px}
 main {background: white; margin: 10px; padding: 10px}
 footer{background: white; margin: 10px; padding: 10px}
-nav {background: hotpink; margin: 10px; padding: 10px}
+nav {background: white; margin-bottom: 0px; padding: 1px}
 aside {background: white; margin: 10px; padding: 10px}
-
+a {text-decoration: none}
 @media screen and (max-width:900px){
     body {
         grid-template-columns: 100%;
