--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ body {
     grid-template-columns: 20% 60% 20%;
     grid-template-areas:
        "header header header"
-       "side2 nav side"
+       "nav nav nav"
        "side2 content side"
        "footer footer footer";
 }
@@ -14,6 +14,7 @@ header {
 nav {
     grid-area: nav;
 }
+
 main {
     grid-area: content;
 }
@@ -43,15 +44,32 @@ ul {
 h1, h2, h3, h4, h5, h6 {font-family: Helvetica, sans-serif}
 li {list-style: none}
 .bild1 {float: none; width: 100%;  padding: 5px}
-#bild2 {float: none; width: 100%; padding: 5px}
+.bild2 {float: none; width: 80%; padding: 30px}
 
 img {float: left; padding-right: 15px; padding-bottom: 5px;}
-header {background: white; margin: 10px; padding: 10px}
-main {background: white; margin: 10px; padding: 10px}
-footer{background: white; margin: 10px; padding: 10px}
-nav {background: white; margin-bottom: 0px; padding: 1px}
-aside {background: white; margin: 10px; padding: 10px}
+header {background: #EBB4C3; margin: 10px; padding: 10px}
+main {background: #EBB4C3; margin: 10px; padding: 10px}
+footer{background: #f3a20e; margin: 10px; padding: 10px}
+nav {background: #DB410A; margin-bottom: 10px; padding: 10px}
+aside {background: #F17363; margin: 10px; padding: 10px}
+.aside2 {background: #F17363; margin: 10px; padding: 10px}
+.video {width: 100%; height: 80%}
 a {text-decoration: none}
+body {background-color: #EBB4C3}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.gallery img {
+    max-width: 100%;
+    height: auto;
+    border: 2px;
+    border-radius: 5px;
+}
+
 @media screen and (max-width:900px){
     body {
         grid-template-columns: 100%;
