--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,6 +79,7 @@ body {background-color: #EBB4C3}
            "nav"
            "content"
            "side"
+           "side2"
            "footer";
 
     }
